# affordance_templates

./: .gitignore  README.md
affordance_ros_control/src/: .gitignore
affordance_template_library/: CMakeLists.txt  package.xml
affordance_template_library/config/: r2.rviz
affordance_template_library/include/affordance_template_library/: affordance_template_collection.h  affordance_template_generics.h  affordance_template_marker.h  affordance_template_parser.h  affordance_template_structure.h  display_object.h  end_effector.h
affordance_template_library/models/: door.stl
affordance_template_library/robots/: atlas.yaml  atlas_moveit.yaml  atlas_sim.yaml  atlas_sim_hybrid.yaml  atlas_sim_moveit.yaml  dreamer.yaml  fetch.yaml  pr2.yaml  r2.yaml  r2_legs.yaml  r2_roscontrol.yaml  r2_upperbody.yaml  r2c_full.yaml  v1.yaml
affordance_template_library/src/: AffordanceTemplateParser.cpp  affordance_template_parser.cpp
affordance_template_library/templates/: Valve.json  cube.json  door.json  iva_handrail.json  knob.json  lever_handle.json  valve.json  wheel.json
affordance_template_markers/: CMakeLists.txt  package.xml
affordance_template_markers/include/affordance_template_markers/: affordance_template.h  affordance_template.py  affordance_template_action.h  affordance_template_planning.h  robot_interface.h
affordance_template_markers/src/: affordance_template.cpp  affordance_template_action.cpp  affordance_template_planning.cpp  robot_interface.cpp
affordance_template_markers/src/affordance_template_markers/: affordance_template.py  affordance_template_collection.py  atdf_parser.py  recognition_object.py  robot_interface.py
affordance_template_msgs/: CMakeLists.txt  package.xml
affordance_template_msgs/action/: Execute.action  Plan.action
affordance_template_msgs/msg/: AffordanceTemplateConfig.msg  AffordanceTemplateStatus.msg  ObjectInfo.msg  RecognitionObjectConfig.msg  RobotConfig.msg  WaypointInfo.msg
affordance_template_msgs/srv/: AffordanceTemplateCommand.srv  AffordanceTemplatePlanCommand.srv  GetAffordanceTemplateStatus.srv  GetObjectPose.srv  GetRecognitionObjectConfigInfo.srv  SaveAffordanceTemplate.srv  ScaleDisplayObject.srv  SetObjectPose.srv
affordance_template_recorder/: CMakeLists.txt  manifest.xml  op_file.txt
affordance_template_recorder/src/: at_recorder_src.cpp  at_recorder_src.cpp~
affordance_template_server/: CMakeLists.txt  package.xml
affordance_template_server/include/affordance_template_server/: interface.h  server.h  service_interface.h
affordance_template_server/launch/: atlas.launch  atlas_hybrid_sim.launch  atlas_sim.launch  fetch.launch  r2.launch  r2_upperbody.launch
affordance_template_server/scripts/: server.py
affordance_template_server/src/: affordance_template_server.py  interface.cpp  main.cpp  parser.cpp  server.cpp  service_interface.cpp  service_interface.py  test.cpp  test_exe.cpp  test_plan.cpp
affordance_templates/: package.xml
build_config/catkin/affordance_template_markers/: CMakeLists.txt_  package.xml_
build_config/catkin/affordance_template_msgs/: CMakeLists.txt_
build_config/catkin/affordance_template_recorder/: CMakeLists.txt_  package.xml_
build_config/catkin/affordance_template_server/: CMakeLists.txt_  package.xml_
build_config/catkin/rviz_affordance_template_panel/: CMakeLists.txt_
build_config/rosbuild/: stack.xml_
build_config/rosbuild/affordance_ros_control/: manifest.xml_
build_config/rosbuild/affordance_template_library/: manifest.xml_
build_config/rosbuild/affordance_template_markers/: manifest.xml_
build_config/rosbuild/affordance_template_msgs/: manifest.xml_
build_config/rosbuild/affordance_template_recorder/: CMakeLists.txt_
build_config/rosbuild/affordance_template_server/: manifest.xml_
build_config/rosbuild/rviz_affordance_template_panel/: CMakeLists.txt_  manifest.xml_
rviz_affordance_template_panel/: .gitignore  CMakeLists.txt  package.xml
rviz_affordance_template_panel/include/rviz_affordance_template_panel/: affordance.h  controls.h  msg_headers.h  robot_config.h  rviz_affordance_template_panel.h  rviz_client.h  server_status_monitor.h  template_status_info.h  util.h  waypoint_display.h
rviz_affordance_template_panel/src/: Affordance.cpp  Affordance.hpp  AffordanceTemplateMsgHeaders.hpp  AffordanceTemplateRVizClient.cpp  AffordanceTemplateRVizClient.hpp  AffordanceTemplateServerStatusMonitor.cpp  AffordanceTemplateServerStatusMonitor.hpp  AffordanceTemplateStatusInfo.hpp  Controls.cpp  Controls.hpp  RecognitionObject.cpp  RobotConfig.hpp  affordance.cpp  controls.cpp  rviz_affordance_template_panel.cpp  rviz_affordance_template_panel.hpp  rviz_client.cpp  server_status_monitor.cpp  util.cpp  util.hpp  waypoint_display.cpp
rviz_affordance_template_panel/ui/: rviz_affordance_template_panel.ui
