<?xml version="1.0"?>
<package>
  <name>affordance_template_library</name>
  <version>0.0.0</version>
  <description>The affordance_template_library package</description>

  <maintainer email="shart@todo.todo">shart</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>