<?xml version="1.0"?>
<package format="2">
  <name>affordance_template_library</name>
  <version>1.0.0</version>
  <description>The affordance_template_library package</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>planner_interface</depend>

</package>
