<?xml version="1.0"?>
<package format="2">
  <name>rviz_affordance_template_panel</name>
  <version>1.0.0</version>
  <description>The rviz_affordance_template_panel package</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>
  <maintainer email="seth@traclabs.com">Seth Gee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rviz</depend>
  <depend>affordance_template_server</depend>
  <depend>affordance_template_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>orocos_kdl</depend>
    
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
